preventing double scroll

--- a/src/components/App/App.styl
+++ b/src/components/App/App.styl
@@ -9,6 +9,7 @@
   padding 12px 16px
   background-color #fff
   justify-content space-between
+  gap 8px
   &_newUI
     padding 8px
 
@@ -87,3 +88,10 @@
   &__description
     margin-top 32px
     font-size 16px
+
+html, body
+  min-height: 100vh;
+  height: auto;
+  display: flex;
+body
+  overflow-y hidden
